modified:   index.html

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <!-- Hero -->
   <section class="min-h-screen flex flex-col justify-center items-center text-center px-4">
-    <img src="../assets/IMG_5857.jpg" alt="Foto Bayu" class="w-40 h-40 rounded-full shadow-lg mb-6 object-cover" data-aos="zoom-in">
+    <img src="/assets/IMG_5857.jpg/" alt="Foto Bayu" class="w-40 h-40 rounded-full shadow-lg mb-6 object-cover" data-aos="zoom-in">
     <h2 class="text-4xl font-bold mb-4" data-aos="fade-up">Halo, Saya Bayu</h2>
     <p class="max-w-2xl text-lg mb-6" data-aos="fade-up" data-aos-delay="200">
       Calon profesional IT yang memiliki ketertarikan dan keahlian dalam jaringan komputer, keamanan sistem, serta pemrograman.
