modified:   index.html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="id" class="scroll-smooth">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,24 +16,29 @@
     }
   </style>
 </head>
+
 <body class="bg-gray-100 text-gray-800 dark:bg-gray-900 dark:text-gray-200 transition-colors duration-300">
 
   <!-- Navbar -->
   <nav class="flex justify-between items-center px-6 py-4 bg-white shadow-md dark:bg-gray-800 sticky top-0 z-50">
     <h1 class="text-xl font-bold">Portofolio</h1>
-    <button id="theme-toggle" class="px-4 py-2 rounded bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 transition">
+    <button id="theme-toggle"
+      class="px-4 py-2 rounded bg-gray-200 dark:bg-gray-700 hover:bg-gray-300 dark:hover:bg-gray-600 transition">
       🌙
     </button>
   </nav>
 
   <!-- Hero -->
   <section class="min-h-screen flex flex-col justify-center items-center text-center px-4">
-    <img src="/assets/IMG_5857.jpg/" alt="Foto Bayu" class="w-40 h-40 rounded-full shadow-lg mb-6 object-cover" data-aos="zoom-in">
+    <img src="assets/IMG_5857.jpg" alt="Foto Bayu" class="w-40 h-40 rounded-full shadow-lg mb-6 object-cover"
+      data-aos="zoom-in">
     <h2 class="text-4xl font-bold mb-4" data-aos="fade-up">Halo, Saya Bayu</h2>
     <p class="max-w-2xl text-lg mb-6" data-aos="fade-up" data-aos-delay="200">
-      Calon profesional IT yang memiliki ketertarikan dan keahlian dalam jaringan komputer, keamanan sistem, serta pemrograman.
+      Calon profesional IT yang memiliki ketertarikan dan keahlian dalam jaringan komputer, keamanan sistem, serta
+      pemrograman.
     </p>
-    <a href="#contact" class="px-6 py-3 rounded-full bg-blue-600 text-white hover:bg-blue-700 shadow transition" data-aos="zoom-in">
+    <a href="#contact" class="px-6 py-3 rounded-full bg-blue-600 text-white hover:bg-blue-700 shadow transition"
+      data-aos="zoom-in">
       Hubungi Saya
     </a>
   </section>
@@ -42,10 +48,10 @@
     <div class="max-w-4xl mx-auto">
       <h3 class="text-3xl font-bold mb-4">Tentang Saya</h3>
       <p class="text-lg leading-relaxed">
-         Saya, Bayu Akbar Indiarto, seorang calon profesional IT yang memiliki ketertarikan dan
-         keahlian dalam jaringan komputer, keamanan sistem, serta pemrograman. Saya ingin
-         mengembangkan keterampilan teknis dan mendapatkan pengalaman praktis melalui
-         program magang di lingkungan kerja yang profesional. 
+        Saya, Bayu Akbar Indiarto, seorang calon profesional IT yang memiliki ketertarikan dan
+        keahlian dalam jaringan komputer, keamanan sistem, serta pemrograman. Saya ingin
+        mengembangkan keterampilan teknis dan mendapatkan pengalaman praktis melalui
+        program magang di lingkungan kerja yang profesional.
       </p>
     </div>
   </section>
@@ -94,9 +100,12 @@
   <section id="contact" class="py-20 px-6 bg-gray-50 dark:bg-gray-800" data-aos="fade-up">
     <div class="max-w-4xl mx-auto text-lg">
       <h3 class="text-3xl font-bold mb-4">Kontak</h3>
-      <p>Email: <a href="mailto:bayuakbarindiarto9@gmail.com" class="text-blue-500 hover:underline">bayuakbarindiarto9@gmail.com</a></p>
-      <p>Instagram: <a href="https://instagram.com/chillguys24_" target="_blank" class="text-blue-500 hover:underline">@chillguys24_</a></p>
-      <p>WhatsApp: <a href="https://wa.me/628998900714" target="_blank" class="text-blue-500 hover:underline">+62 899-8900-714</a></p>
+      <p>Email: <a href="mailto:bayuakbarindiarto9@gmail.com"
+          class="text-blue-500 hover:underline">bayuakbarindiarto9@gmail.com</a></p>
+      <p>Instagram: <a href="https://instagram.com/chillguys24_" target="_blank"
+          class="text-blue-500 hover:underline">@chillguys24_</a></p>
+      <p>WhatsApp: <a href="https://wa.me/628998900714" target="_blank" class="text-blue-500 hover:underline">+62
+          899-8900-714</a></p>
     </div>
   </section>
 
@@ -118,4 +127,5 @@
     });
   </script>
 </body>
+
 </html>
