--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
   <nav
     class="flex justify-between items-center px-6 py-4 bg-white/80 dark:bg-gray-800/80 backdrop-blur-lg shadow-md dark:shadow-black/20 sticky top-0 z-50 transition-all">
-    <a href="#" class="text-xl font-bold">Bayu AI</a>
+    <a href="#" class="text-xl font-bold">Bayu Portofolio</a>
     <div class="flex items-center gap-4">
       <button id="menu-toggle" class="md:hidden text-xl z-50 cursor-pointer">
         <i class="fas fa-bars"></i>
