modified:   index.html

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             data-aos="flip-left">
             <div
               class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-lg hover:shadow-xl hover:-translate-y-1 transition-all"
-              data-aos="flip-left">
+              data-aos="center-middle">
               <img src="assets/448203-PFG4QC-911.jpg" alt="Sistem Jaringan Perusahaan" class="w-full h-40 object-cover">
               <div class="p-6">
                 <h4 class="font-semibold text-lg mb-2">Sistem Jaringan Perusahaan</h4>
