--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
   <nav
     class="flex justify-between items-center px-6 py-4 bg-white/80 dark:bg-gray-800/80 backdrop-blur-lg shadow-md dark:shadow-black/20 sticky top-0 z-50 transition-all">
-    <a href="#" class="text-xl font-bold">Bayu Portofolio</a>
+    <a href="#" class="text-xl font-bold">Bayu </a>
     <div class="flex items-center gap-4">
       <button id="menu-toggle" class="md:hidden text-xl z-50 cursor-pointer">
         <i class="fas fa-bars"></i>
@@ -299,46 +299,41 @@
           <div
             class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-lg hover:shadow-xl hover:-translate-y-1 transition-all"
             data-aos="flip-left">
-            <div
-              class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-lg hover:shadow-xl hover:-translate-y-1 transition-all"
-              data-aos="center-middle">
-              <img src="assets/448203-PFG4QC-911.jpg" alt="Sistem Jaringan Perusahaan" class="w-full h-40 object-cover">
-              <div class="p-6">
-                <h4 class="font-semibold text-lg mb-2">Sistem Jaringan Perusahaan</h4>
-                <p class="text-gray-600 dark:text-gray-300 mb-4 text-sm">
-                  Desain dan implementasi infrastruktur jaringan untuk perusahaan menengah.
-                </p>
-                <div class="flex flex-wrap gap-2">
-                  <span
-                    class="px-3 py-1 bg-blue-100 text-blue-800 dark:bg-blue-900/30 dark:text-blue-300 rounded-full text-xs font-semibold">Cisco</span>
-                  <span
-                    class="px-3 py-1 bg-green-100 text-green-800 dark:bg-green-900/30 dark:text-green-300 rounded-full text-xs font-semibold">LAN</span>
-                  <span
-                    class="px-3 py-1 bg-purple-100 text-purple-800 dark:bg-purple-900/30 dark:text-purple-300 rounded-full text-xs font-semibold">WAN</span>
-                </div>
+            <div class="h-40 bg-gradient-to-r from-blue-400 to-purple-500"></div>
+            <div class="p-6">
+              <h4 class="font-semibold text-lg mb-2">Sistem Jaringan Perusahaan</h4>
+              <p class="text-gray-600 dark:text-gray-300 mb-4 text-sm">Desain dan implementasi infrastruktur jaringan
+                untuk perusahaan menengah.</p>
+              <div class="flex flex-wrap gap-2">
+                <span
+                  class="px-3 py-1 bg-blue-100 text-blue-800 dark:bg-blue-900/30 dark:text-blue-300 rounded-full text-xs font-semibold">Cisco</span>
+                <span
+                  class="px-3 py-1 bg-green-100 text-green-800 dark:bg-green-900/30 dark:text-green-300 rounded-full text-xs font-semibold">LAN</span>
+                <span
+                  class="px-3 py-1 bg-purple-100 text-purple-800 dark:bg-purple-900/30 dark:text-purple-300 rounded-full text-xs font-semibold">WAN</span>
               </div>
             </div>
-
-            <div
-              class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-lg hover:shadow-xl hover:-translate-y-1 transition-all"
-              data-aos="flip-right">
-              <div class="h-40 bg-gradient-to-r from-green-400 to-blue-500"></div>
-              <div class="p-6">
-                <h4 class="font-semibold text-lg mb-2">Aplikasi Manajemen Inventory</h4>
-                <p class="text-gray-600 dark:text-gray-300 mb-4 text-sm">Aplikasi web untuk manajemen inventory dengan
-                  fitur laporan.</p>
-                <div class="flex flex-wrap gap-2">
-                  <span
-                    class="px-3 py-1 bg-blue-100 text-blue-800 dark:bg-blue-900/30 dark:text-blue-300 rounded-full text-xs font-semibold">PHP</span>
-                  <span
-                    class="px-3 py-1 bg-yellow-100 text-yellow-800 dark:bg-yellow-900/30 dark:text-yellow-300 rounded-full text-xs font-semibold">JavaScript</span>
-                  <span
-                    class="px-3 py-1 bg-green-100 text-green-800 dark:bg-green-900/30 dark:text-green-300 rounded-full text-xs font-semibold">MySQL</span>
-                </div>
+          </div>
+          <div
+            class="bg-white dark:bg-gray-800 rounded-xl overflow-hidden shadow-lg hover:shadow-xl hover:-translate-y-1 transition-all"
+            data-aos="flip-right">
+            <div class="h-40 bg-gradient-to-r from-green-400 to-blue-500"></div>
+            <div class="p-6">
+              <h4 class="font-semibold text-lg mb-2">Aplikasi Manajemen Inventory</h4>
+              <p class="text-gray-600 dark:text-gray-300 mb-4 text-sm">Aplikasi web untuk manajemen inventory dengan
+                fitur laporan.</p>
+              <div class="flex flex-wrap gap-2">
+                <span
+                  class="px-3 py-1 bg-blue-100 text-blue-800 dark:bg-blue-900/30 dark:text-blue-300 rounded-full text-xs font-semibold">PHP</span>
+                <span
+                  class="px-3 py-1 bg-yellow-100 text-yellow-800 dark:bg-yellow-900/30 dark:text-yellow-300 rounded-full text-xs font-semibold">JavaScript</span>
+                <span
+                  class="px-3 py-1 bg-green-100 text-green-800 dark:bg-green-900/30 dark:text-green-300 rounded-full text-xs font-semibold">MySQL</span>
               </div>
             </div>
           </div>
         </div>
+      </div>
     </section>
 
     <section id="contact" class="py-24 px-6">
